--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,85 +1,129 @@
-// Inspired by Catnap
 {
-    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-    "logo": {
-        "type": "small",
-        "padding": {
-            "top": 1
-        }
+  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "logo": {
+    "source": "$(find \"${XDG_CONFIG_HOME:-$HOME/.config}/fastfetch/pngs/\" -name \"*.png\" | sort -R | head -1)",
+    "height": 18
+  },
+  "display": {
+    "separator": " : "
+  },
+  "modules": [
+    {
+      "type": "custom",
+      "format": "  \u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m "
     },
-    "display": {
-        "separator": " "
+    {
+      "type": "custom",
+      "format": ""
     },
-    "modules": [
-        {
-            "key": "╭───────────╮",
-            "type": "custom"
+    {
+      "type": "custom",
+      "format": "    You Should Cry While You Still Can "
+    },
+    {
+      "type": "custom",
+      "format": ""
+    },
+    {
+      "type": "os",
+      "key": "   OS",
+      "keyColor": "38;5;19"  // Dark Blue
+    },
+    {
+      "type": "kernel",
+      "key": "   Kernel",
+      "keyColor": "97"  // White
+    },
+    {
+      "type": "packages",
+      "key": "  󰏗 Packages",
+      "keyColor": "34"  // Keeping the same
+    },
+    {
+      "type": "display",
+      "key": "  󱍜 Display",
+      "keyColor": "38;5;208"  // Random: Bright Orange
+    },
+    {
+      "type": "wm",
+      "key": "   WM",
+      "keyColor": "38;5;81"  // Light Blue
+    },
+    {
+      "type": "terminal",
+      "key": "   Terminal",
+      "keyColor": "90"  // Grey
+    },
+    {
+      "type": "media",
+      "key": "  󰝚  Music",
+      "keyColor": "34"
+    },
+
+     {
+            "type": "command",
+            "key": "  󱦟 OS Age ",
+            "keyColor": "31",
+            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
         },
-        {
-            "key": "│ {#31} user    {#keys}│",
-            "type": "title",
-            "format": "{user-name}"
+
+     {
+            "type": "uptime",
+            "key": "  ",
+            "keyColor": "34",
         },
-        {
-            "key": "│ {#32}󰇅 hname   {#keys}│",
-            "type": "title",
-            "format": "{host-name}"
-        },
-        {
-            "key": "│ {#33}󰅐 uptime  {#keys}│",
-            "type": "uptime"
-        },
-        {
-            "key": "│ {#34} distro   {#keys}│",
-            "type": "os"
-        },
-        {
-            "key": "│ {#35} kernel  {#keys}│",
-            "type": "kernel"
-        },
-        {
-            "key": "│ {#36}󰇄 desktop {#keys}│",
-            "type": "de"
-        },
-        {
-            "key": "│ {#31} term    {#keys}│",
-            "type": "terminal"
-        },
-        {
-            "key": "│ {#32} shell   {#keys}│",
-            "type": "shell"
-        },
-        {
-            "key": "│ {#33}󰍛 cpu     {#keys}│",
-            "type": "cpu",
-            "showPeCoreCount": true
-        },
-        {
-            "key": "│ {#34}󰉉 disk    {#keys}│",
-            "type": "disk",
-            "folders": "/"
-        },
-        {
-            "key": "│ {#35} memory  {#keys}│",
-            "type": "memory"
-        },
-        {
-            "key": "│ {#36}󰩟 network {#keys}│",
-            "type": "localip",
-            "format": "{ipv4} ({ifname})"
-        },
-        {
-            "key": "├───────────┤",
-            "type": "custom"
-        },
-        {
-            "key": "│ {#39} colors  {#keys}│",
-            "type": "colors",
-            "symbol": "circle"
-        },
-        {
-            "key": "╰───────────╯",
-            "type": "custom"
-        }
-    ]
+    {
+      "type": "custom",
+      "format": "  󰊤  GitHub : Vinayydv3695",
+      "keyColor": "\u001b[38;5;75m"
+    },
+{
+  "type": "battery",
+  "key": "   Battery",
+  "keyColor": "38;5;228"  // Light Yellow
+},
+    "break",
+    {
+      "type": "title",
+      "key": "   User",
+      "keyColor": "38;5;250"  // Black
+    },
+    {
+      "type": "custom",
+      "format": ""
+    },
+    {
+      "type": "cpu",
+      "format": "{1}",
+      "key": "   CPU",
+      "keyColor": "38;5;118"  // Bright Green
+    },
+    {
+      "type": "gpu",
+      "format": "{2}",
+      "key": "   GPU",
+      "keyColor": "38;5;220"  // Yellow
+    },
+    {
+      "type": "gpu",
+      "format": "{3}",
+      "key": "   GPU Driver",
+      "keyColor": "38;5;27"  // Cyan
+    },
+    {
+      "type": "memory",
+      "key": "   Memory",
+      "keyColor": "38;5;99"  // Pinkish Purple
+    },
+    {
+      "type": "custom",
+      "format": ""
+    },
+    "break",
+    {
+      "type": "custom",
+      "format": "  \u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m "
+    },
+    "break"
+  ]
 }
