--- a/.config/conky/Mimosa/Mimosa.conf
+++ b/.config/conky/Mimosa/Mimosa.conf
@@ -67,16 +67,16 @@ conky.config = {
   use_spacer = 'none',
   show_graph_scale = false,
   show_graph_range = false,
-  lua_load = '~/.conky/Mimosa/scripts/rings-v1.2.1.lua',
+  lua_load = '~/.config/conky/Mimosa/scripts/rings-v1.2.1.lua',
   lua_draw_hook_pre = 'ring_stats',
 }
 
 conky.text = [[
-${execi 600 ~/.conky/Mimosa/scripts/weather-v2.0.sh}\
-${image ~/.conky/Mimosa/res/bg.png -s 300x461 -p 0,135}
+${execi 600 ~/.config/conky/Mimosa/scripts/weather-v2.0.sh}\
+${image ~/.config/conky/Mimosa/res/bg.png -s 300x461 -p 0,135}
 ${offset 20}${voffset 0}${font Abel:bold:size=45}${time %H:%M}${font}
 ${offset 0}${voffset 3}${font Abel:size=14}${time %A %d %B}
-${offset 14}${voffset 44}${font feather:size=25}${execi 15 ~/.conky/Mimosa/scripts/weather-text-icon}${goto 73}${font Bebas Neue:size=22}${execi 100 cat ~/.cache/weather.json | jq '.main.temp' | awk '{print int($1+0.5)}'}°C${font}
+${offset 14}${voffset 44}${font feather:size=25}${execi 15 ~/.config/conky/Mimosa/scripts/weather-text-icon}${goto 73}${font Bebas Neue:size=22}${execi 100 cat ~/.cache/weather.json | jq '.main.temp' | awk '{print int($1+0.5)}'}°C${font}
 ${offset 14}${voffset 5}${color1}${font Abel:bold:size=14}${execi 100 cat ~/.cache/weather.json | jq -r '.name'}${font}
 ${offset 14}${voffset 0}${color}${font Abel:size=12}${execi 100 cat ~/.cache/weather.json | jq -r '.weather[0].description' | sed "s|\<.|\U&|g" | cut -b 1-18}${font}
 ${offset 14}${voffset 0}${color}${font Abel:size=8}Wind : ${execi 100 (cat ~/.cache/weather.json | jq '.wind.speed')}mph at ${execi 100 (cat ~/.cache/weather.json | jq '.wind.deg')}°
@@ -84,7 +84,7 @@ ${offset 14}${voffset 0}${color}${font Abel:size=8}Humidity : ${execi 100 (cat ~
 ${Offset 172}${voffset -119}${color}${font Abel:bold:size=14}${time %B}
 ${alignr 43}${voffset 0}${color0}${font Fantasque Sans Mono:size=8}SU MO TU WE TH FR SA
 ${offset 167}${voffset 4}${color #CCCCCC}${font Fantasque Sans Mono:size=8}${execpi 1800 LAR=`date +%-d`; ncal -bh | sed '2d' | sed -e '1d' -e 's/\<'$LAR'\>/${color2}&${color0}/' | sed ':a;N;$!ba;s/\n/\n${goto 172}${voffset 2}/g'}
-${offset 27}${voffset 155}${color}${font Bebas Neue:size=18}${cpu cpu0}%${goto 104}${memperc}%${goto 172}${battery_percent BAT0}%${goto 247}${execi 2 ~/.conky/Mimosa/scripts/ctof.sh}°C
+${offset 27}${voffset 155}${color}${font Bebas Neue:size=18}${cpu cpu0}%${goto 104}${memperc}%${goto 172}${battery_percent BAT0}%${goto 247}${execi 2 ~/.config/conky/Mimosa/scripts/ctof.sh}°C
 ${offset 14}${voffset 32}${color}${font Abel:bold:size=14}Storage
 ${offset 14}${voffset -3}${color}${font Abel:size=10}System :
 ${offset 14}${voffset -5}${color1}${font Abel:size=9}${fs_bar 20,111} 
@@ -94,7 +94,7 @@ ${offset 14}${voffset -5}${color1}${font Abel:size=9}${fs_bar 20,111 /home}
 ${offset 18}${voffset -27}${color}${font Abel:size=8}${fs_used /home} / ${fs_size /home}${font}
 ${color}${offset 172}${voffset -105}${font Material:size=18}
 ${color}${offset 172}${voffset 0}${font Abel:size=9}${exec playerctl status}
-${color2}${offset 172}${voffset 0}${font Abel:bold:size=10}${exec ~/.conky/Mimosa/scripts/playerctl.sh}${font}
+${color2}${offset 172}${voffset 0}${font Abel:bold:size=10}${exec ~/.config/conky/Mimosa/scripts/playerctl.sh}${font}
 ${color}${offset 172}${voffset 0}${font Abel:italic:size=9}${exec playerctl metadata xesam:title | cut -b 1-25}${font}
 ${color}${offset 172}${voffset 0}${font Abel:size=8}${exec playerctl position --format "{{ duration(position) }}"}${font}
 ]]
