--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -17,77 +17,62 @@
       "format": ""
     },
     {
-      "type": "custom",
-      "format": "    You Should Cry While You Still Can "
-    },
-    {
-      "type": "custom",
-      "format": ""
-    },
-    {
       "type": "os",
-      "key": "   OS",
-      "keyColor": "38;5;19"  // Dark Blue
+      "key": "   OS",
+      "keyColor": "38;5;81" // Dark Blue
     },
     {
       "type": "kernel",
       "key": "   Kernel",
-      "keyColor": "97"  // White
+      "keyColor": "38;5;3" // White
     },
     {
       "type": "packages",
       "key": "  󰏗 Packages",
-      "keyColor": "34"  // Keeping the same
+      "keyColor": "34" // Keeping the same
     },
     {
       "type": "display",
       "key": "  󱍜 Display",
-      "keyColor": "38;5;208"  // Random: Bright Orange
+      "keyColor": "38;5;208" // Random: Bright Ora
     },
     {
       "type": "wm",
-      "key": "   WM",
-      "keyColor": "38;5;81"  // Light Blue
+      "key": "    WM",
+      "keyColor": "38;5;176" // Light Blue
     },
     {
       "type": "terminal",
       "key": "   Terminal",
-      "keyColor": "90"  // Grey
+      "keyColor": "38;5;7" // Grey
+    },
+    {
+      "type": "shell",
+      "key": "   Shell",
+      "keyColor": "38;5;45", // Cyan
     },
     {
       "type": "media",
       "key": "  󰝚  Music",
       "keyColor": "34"
     },
-
-     {
-            "type": "command",
-            "key": "  󱦟 OS Age ",
-            "keyColor": "31",
-            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
-        },
-
-     {
-            "type": "uptime",
-            "key": "  ",
-            "keyColor": "34",
-        },
     {
-      "type": "custom",
-      "format": "  󰊤  GitHub : Vinayydv3695",
-      "keyColor": "\u001b[38;5;75m"
+      "type": "command",
+      "key": "  󱦟 OS Age ",
+      "keyColor": "31",
+      "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
     },
-{
-  "type": "battery",
-  "key": "   Battery",
-  "keyColor": "38;5;228"  // Light Yellow
-},
+    {
+      "type": "uptime",
+      "key": "  ",
+      "keyColor": "34",
+    },
+    {
+      "type": "battery",
+      "key": "    Battery",
+      "keyColor": "38;5;228" // Light Yellow
+    },
     "break",
-    {
-      "type": "title",
-      "key": "   User",
-      "keyColor": "38;5;250"  // Black
-    },
     {
       "type": "custom",
       "format": ""
@@ -96,24 +81,24 @@
       "type": "cpu",
       "format": "{1}",
       "key": "   CPU",
-      "keyColor": "38;5;118"  // Bright Green
+      "keyColor": "38;5;26" // Bright Green
     },
     {
       "type": "gpu",
       "format": "{2}",
       "key": "   GPU",
-      "keyColor": "38;5;220"  // Yellow
+      "keyColor": "38;5;220" // Yellow
     },
     {
       "type": "gpu",
       "format": "{3}",
       "key": "   GPU Driver",
-      "keyColor": "38;5;27"  // Cyan
+      "keyColor": "38;5;109" // Cyan
     },
     {
       "type": "memory",
       "key": "   Memory",
-      "keyColor": "38;5;99"  // Pinkish Purple
+      "keyColor": "38;5;141" // Pinkish Purple
     },
     {
       "type": "custom",
